@@ -1,5 +1,6 @@
 GridClassKey 1.0.1-rc2 (September 21, 2014)
 =================================================
+- give option to remove limit on revealing children on tree
 - [#116] fix error when creating a document in the root of the site by @RuGa
 - [#113] New children's settings checkboxes not saved [$10] bounty placed by @vierkantemeter
 
